# Atomic

./: .gitignore  Interpolated Seismic Data  LICENSE  README.md  main.py  pyproject.toml  server.py
data/: shotgather_177.npz  shotgather_205.npz  shotgather_229.npz  shotgather_6_interpolated.npz  shotgather_6_interpolated_denoised.npz
hello_world_mcp/: pyproject.toml  server.py
result/: shotgather_101_denoised.npz
testdata1/: shotgather_176.npz  shotgather_216.npz  shotgather_6.npz
testdata2/: shotgather_101.npz  shotgather_208.npz
