[project]
name = "atomic-seismic-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.5.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "pydantic-ai>=0.2.12",
    "segyio>=1.9.13",
    "starlette>=0.47.0",
    "streamlit>=1.45.1",
        "fastmcp >= 2.3.0",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.8.1",
    "segyio>=1.9.13",
    "pylops>=2.1.0",
    "scipy>=1.13.0",
    "numpy>=1.22.3",
]
